[project]
name = "notion-cli"
version = "1.0.0"
description = "Comprehensive command-line interface for Notion API"
requires-python = ">=3.10"
dependencies = [
    "httpx",            # Async HTTP client for API calls
    "click",            # CLI framework
    "python-dotenv",    # Environment variable management
]

[project.optional-dependencies]
dev = [
    "pytest",           # Testing framework
    "pytest-cov",       # Test coverage reporting
    "pytest-httpx",     # HTTP mocking for tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=scripts.notion --cov-report=term-missing"
markers = [
    "integration: marks tests that require Notion API access",
]

[tool.black]
line-length = 88
target-version = ['py310']
